fixed logOutButton bug that made it render with wrong colors

--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -14,11 +14,12 @@
 
 .nav-link {
   float: right;
-  color: #f2f2f2;
+  color: aliceblue;
   text-align: center;
   padding: 24px 10px;
   text-decoration: none;
   font-size: 15px;
+  background-color: inherit;
 
   /* these last two make the logout button in
   the nav bar look like another link */
